fix: calcularNota design

--- a/src/app/clientes/pages/calculo-cuota/calculo-cuota.component.html
+++ b/src/app/clientes/pages/calculo-cuota/calculo-cuota.component.html
@@ -35,12 +35,14 @@
   </div>
 
   <div class="row">
-    <div class="col-sm-6 text-center text-md-start">
-      <input type="submit" value="Calcular cuota" class="btn btn-success">
+    <div class="col">
+      <input type="submit" value="Calcular cuota" class="btn btn-info w-100">
     </div>
-    <div class="col-sm-6 text-center text-md-start">
-      <label class="form-label">Monto de cuota</label>
-      <p class="fs-1 fw-bold">165</p>
+  </div>
+
+  <div class="row">
+    <div class="col-8 mx-auto mt-3">
+      <p class="text-center">350.00</p>
     </div>
   </div>
 
