making folders more orderly for the future

--- a/src/app/clientes/components/home/home.component.html
+++ b/src/app/clientes/components/home/home.component.html
@@ -1,258 +1,1 @@
-<!-- <app-nav></app-nav> -->
-
-<nav class="navbar navbar-light navbar-vertical navbar-expand-lg navbar-inverted">
-  <div class="d-flex align-items-center">
-    <div class="toggle-icon-wrapper">
-
-      <button class="btn navbar-toggler-humburger-icon navbar-vertical-toggle" data-bs-toggle="tooltip"
-        data-bs-placement="left" title="Mostrar / ocultar menú" #btnnavbar>
-        <span class="navbar-toggle-icon"><span class="toggle-line"></span></span>
-      </button>
-
-    </div><a class="navbar-brand" routerLink="/inicio">
-      <div class="d-flex align-items-center py-3">
-        <!-- <img class="me-2" src="assets/img/icons/spot-illustrations/afatex.png" alt="" width="40" /><span class="font-sans-serif"></span> -->
-      </div>
-    </a>
-  </div>
-  <div class="collapse navbar-collapse mt-0" id="navbarVerticalCollapse">
-    <div class="navbar-vertical-content scrollbar">
-      <ul class="navbar-nav flex-column mb-3" id="navbarVerticalNav">
-        <!-- Bienvenido --> <!-- {{auth.usuario_nombre}} -->
-        <li class="nav-item">
-          <div class="row navbar-vertical-label-wrapper mt-3 mb-2">
-            <div class="col-auto navbar-vertical-label text-white">
-              <span class="fas fa-sitemap mr-1"></span> Módulos
-            </div>
-            <div class="col ps-0">
-              <hr class="mb-0 navbar-vertical-divider" />
-            </div>
-          </div>
-
-
-          <!-- ##########################   BOTON PARA DASHBOARD   ########################## -->
-
-          <a class="nav-link" href="#dashboard" role="button" routerLink="dashboard" routerLinkActive="active"
-            *ngIf="permisos['dashboard']">
-            <div class="d-flex align-items-center"><span class="nav-link-icon"><span
-                  class="fas fa-solid fa-chart-line"></span></span>
-              <span class="nav-link-text ps-1"> Dashboard</span>
-            </div>
-          </a>
-
-
-          <!-- ##########################   MENÚ FACTURACIÓN   ########################## -->
-          <!-- <a class="nav-link dropdown-indicator" href="#dashboard" role="button" data-bs-toggle="collapse" aria-expanded="true" aria-controls="dashboard"></a> -->
-          <!-- <a class="nav-link dropdown-indicator" (click)="mostrarMenu('facturacion')" href="#facturacion" role="button" data-bs-toggle="collapse" aria-expanded="true" aria-controls="facturacion"> -->
-          <a class="nav-link dropdown-indicator" href="#facturacion" role="button" data-bs-toggle="collapse"
-            aria-expanded="true" aria-controls="facturacion" *ngIf="permisos['facturacion']">
-            <div class="d-flex align-items-center"><span class="nav-link-icon"><span
-                  class="fas fa-file-invoice"></span></span>
-              <span class="nav-link-text ps-1"> Facturación</span>
-            </div>
-          </a>
-          <ul class="nav collapse false" id="facturacion">
-            <li class="nav-item"> <!-- Facturar -->
-              <a class="nav-link" routerLink="facturacion/documentos/documento" routerLinkActive="active"
-                aria-expanded="false" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
-                *ngIf="permisos['nuevo_documento']">
-                <div class="d-flex align-items-center"><span class="nav-link-text ps-1"> Nuevo documento </span>
-                </div>
-              </a>
-            </li>
-            <li class="nav-item"> <!-- Facturar -->
-              <a class="nav-link" routerLink="facturacion/documentos/reporte" routerLinkActive="active"
-                aria-expanded="false" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
-                *ngIf="permisos['reporte_documentos']">
-                <div class="d-flex align-items-center"><span class="nav-link-text ps-1"> Reporte documentos </span>
-                </div>
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider mx-4">
-            </li>
-            <li class="nav-item"> <!--  -->
-              <a class="nav-link dropdown-indicator" href="#cheques" data-bs-toggle="collapse" aria-expanded="false"
-                aria-controls="cheques" *ngIf="permisos['cheques']">
-                <div class="d-flex align-items-center">
-                  <span class="nav-link-text ps-1"> Cheques </span>
-                </div>
-              </a>
-              <ul class="nav collapse false" id="cheques">
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="facturacion/cheques/cheque" routerLinkActive="active"
-                    aria-expanded="false" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
-                    *ngIf="permisos['emitir_cheque']">
-                    <div class="d-flex align-items-center"><span class="nav-link-text ps-1">Emitir cheque</span>
-                    </div>
-                  </a>
-                </li>
-                <!-- <li class="nav-item">
-                  <a class="nav-link"  routerLink="facturacion/cheques/reporte" routerLinkActive="active" aria-expanded="false" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">
-                    <div class="d-flex align-items-center"><span class="nav-link-text ps-1">Imprimir de cheques</span>
-                    </div>
-                  </a>
-                </li> -->
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="facturacion/cheques/reporte" routerLinkActive="active"
-                    aria-expanded="false" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
-                    *ngIf="permisos['reporte_cheques_emitidos']">
-                    <div class="d-flex align-items-center"><span class="nav-link-text ps-1">Reporte de cheques emitidos
-                      </span>
-                    </div>
-                  </a>
-                </li>
-
-              </ul>
-            </li>
-
-            <!-- ##########################  FACTURACIÓN >> CHEQUES   ########################## -->
-
-
-          </ul>
-
-
-          <!-- ##########################   MENÚ INVENTARIO   ########################## -->
-          <a class="nav-link dropdown-indicator" href="#inventario" role="button" data-bs-toggle="collapse"
-            aria-expanded="false" aria-controls="inventario" *ngIf="permisos['inventario']">
-            <div class="d-flex align-items-center"><span class="nav-link-icon"><span
-                  class="fas fa-cubes"></span></span><span class="nav-link-text ps-1">Inventario</span>
-            </div>
-          </a>
-          <ul class="nav collapse" id="inventario">
-            <li class="nav-item">
-              <a class="nav-link dropdown-indicator" href="#categoria" data-bs-toggle="collapse" aria-expanded="false"
-                aria-controls="categoria" *ngIf="permisos['categorias']">
-                <div class="d-flex align-items-center">
-                  <span class="nav-link-text ps-1"> Categorías</span>
-                </div>
-              </a>
-              <ul class="nav collapse false" id="categoria">
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="/inicio/inventario/categorias/categoria" routerLinkActive="active"
-                    aria-expanded="false" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
-                    *ngIf="permisos['nueva_categoria']">
-                    <div class="d-flex align-items-center"><span class="nav-link-text ps-1">Nueva categoría</span>
-                    </div>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="/inicio/inventario/categorias/reporte" routerLinkActive="active"
-                    aria-expanded="false" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
-                    *ngIf="permisos['reporte_categorias']">
-                    <div class="d-flex align-items-center"><span class="nav-link-text ps-1">Reporte de categorías</span>
-                    </div>
-                  </a>
-                </li>
-              </ul>
-
-              <!--                              SUB MENÚ PRODUCTOS   ########################## -->
-              <a class="nav-link dropdown-indicator" href="#productos" data-bs-toggle="collapse" aria-expanded="false"
-                aria-controls="productos" *ngIf="permisos['inventario_productos']">
-                <div class="d-flex align-items-center">
-                  <span class="nav-link-text ps-1"> Inventario</span>
-                </div>
-              </a>
-              <ul class="nav collapse false" id="productos">
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="/inicio/inventario/inventarios/producto" routerLinkActive="active"
-                    aria-expanded="false" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
-                    *ngIf="permisos['nuevo_producto']">
-                    <div class="d-flex align-items-center"><span class="nav-link-text ps-1"> Nuevo producto </span>
-                    </div>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="/inicio/inventario/inventarios/reporte" routerLinkActive="active"
-                    aria-expanded="false" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
-                    *ngIf="permisos['reporte_inventario']">
-                    <div class="d-flex align-items-center"><span class="nav-link-text ps-1"> Reporte de inventario
-                      </span>
-                    </div>
-                  </a>
-                </li>
-              </ul>
-
-              <!--                               SUB MENÚ ORDEN COMPRA INVENTARIO   ########################## -->
-              <a class="nav-link dropdown-indicator" href="#oci" data-bs-toggle="collapse" aria-expanded="false"
-                aria-controls="oci" *ngIf="permisos['oci']">
-                <div class="d-flex align-items-center">
-                  <span class="nav-link-text ps-1"> OCI </span>
-                </div>
-              </a>
-              <ul class="nav collapse false" id="oci">
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="/inicio/inventario/ocis/oci" routerLinkActive="active"
-                    aria-expanded="false" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
-                    *ngIf="permisos['nueva_oci']">
-                    <div class="d-flex align-items-center"><span class="nav-link-text ps-1"> Nueva OCI </span>
-                    </div>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="/inicio/inventario/ocis/reporte/pendiente" routerLinkActive="active"
-                    aria-expanded="false" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
-                    *ngIf="permisos['oci_pendiente']">
-                    <div class="d-flex align-items-center"><span class="nav-link-text ps-1"> OCI pendiente </span>
-                    </div>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="/inicio/inventario/ocis/reporte/recibido" routerLinkActive="active"
-                    aria-expanded="false" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
-                    *ngIf="permisos['oci_recibido']">
-                    <div class="d-flex align-items-center"><span class="nav-link-text ps-1"> OCI recibido </span>
-                    </div>
-                  </a>
-                </li>
-
-                <!--                               SUB MENÚ KARDEX   ########################## -->
-                <a class="nav-link dropdown-indicator" href="#kardex" data-bs-toggle="collapse" aria-expanded="false"
-                  aria-controls="kardex" *ngIf="permisos['kardex']">
-                  <div class="d-flex align-items-center">
-                    <span class="nav-link-text ps-1"> Kardex</span>
-                  </div>
-                </a>
-                <ul class="nav collapse false" id="kardex">
-                  <li class="nav-item">
-                    <a class="nav-link" routerLink="/inicio/inventario/kardexs/kardex" routerLinkActive="active"
-                      aria-expanded="false" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
-                      *ngIf="permisos['ajuste_inventario']">
-                      <div class="d-flex align-items-center"><span class="nav-link-text ps-1"> Ajuste de inventario
-                        </span>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" routerLink="/inicio/inventario/kardexs/reporte" routerLinkActive="active"
-                      aria-expanded="false" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
-                      *ngIf="permisos['reporte']">
-                      <div class="d-flex align-items-center"><span class="nav-link-text ps-1"> Reporte </span>
-                      </div>
-                    </a>
-                  </li>
-
-                </ul>
-
-                <!--                               SUB MENÚ ORDEN SALIDA   ########################## -->
-
-                <a class="nav-link dropdown-indicator" href="#orden" data-bs-toggle="collapse" aria-expanded="false"
-                  aria-controls="orden" *ngIf="permisos['ordenes_salida']">
-                  <div class="d-flex align-items-center">
-                    <span class="nav-link-text ps-1"> Ordenes de salida</span>
-                  </div>
-                </a>
-                <ul class="nav collapse false" id="orden">
-                  <li class="nav-item">
-                    <a class="nav-link" routerLink="/inicio/inventario/orden-salida/reporte" routerLinkActive="active"
-                      aria-expanded="false" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
-                      *ngIf="permisos['reporte_ordenes']">
-                      <div class="d-flex align-items-center"><span class="nav-link-text ps-1"> Reporte de ordenes</span>
-                      </div>
-                    </a>
-                  </li>
-                </ul>
-              </ul>
-              <div>
-
-                resto contenido
+<router-outlet></router-outlet>
