exportando los clientes

--- a/src/app/clientes/components/header/header.component.html
+++ b/src/app/clientes/components/header/header.component.html
@@ -13,8 +13,8 @@
       </a>
     
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Exportar</a></li>
-        <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
+        <li><button type="button" class="dropdown-item" (click)="guardarCliente()">Exportar</button></li>
+        <li><a class="dropdown-item">Cerrar sesion</a></li>
       </ul>
     </div>
   </div>
