add: porDesembolsar component

--- a/src/app/creditos/pages/por-desembolsar/por-desembolsar.component.html
+++ b/src/app/creditos/pages/por-desembolsar/por-desembolsar.component.html
@@ -1,1 +1,36 @@
-<p>por-desembolsar works!</p>
+<header class="bg-dark p-3">
+  <h1 class="fs-1 text-capitalize text-white mb-0 text-center text-md-start">
+    Lista de creditos por desembolsar
+  </h1>
+</header>
+
+<section class="p-2 mt-2 bg-white shadow-sm rounded-1 mx-auto">
+  <p class="text-primary mb-2">
+    Oficial:
+    <span class="text-danger text-uppercase fw-bold">perez lopez german</span>
+  </p>
+  
+  <p class="text-primary mb-2">
+    Monto Total a Desembolsar:
+    <span class="text-danger text-uppercase fw-bold">$8000</span>
+  </p>
+
+  <p class="text-primary mb-2">
+    Monto Desembolsado:
+    <span class="text-danger text-uppercase fw-bold">$0</span>
+  </p>
+
+  <p class="text-primary mb-2">
+    Desembolsados Realizados:
+    <span class="text-danger text-uppercase fw-bold">0</span>
+  </p>
+
+  <p class="text-primary mb-2">
+    Cantidad de Clientes:
+    <span class="text-danger text-uppercase fw-bold">2</span>
+  </p>
+</section>
+
+<main class="mt-5 d-flex">
+  <app-cliente></app-cliente>
+</main>
