add: infoCredito tabs

--- a/src/app/creditos/pages/ver-info/ver-info.component.html
+++ b/src/app/creditos/pages/ver-info/ver-info.component.html
@@ -5,7 +5,7 @@
 </header>
 
 <div *ngIf="cliente.nombres; else tabsInfo">
-  <p>{{ cliente | json }}</p>
+  <app-tabs [cliente]="cliente"></app-tabs>
 </div>
 
 <ng-template #tabsInfo>
