--- a/src/app/creditos/components/datosTabs/datos-cliente/datos-cliente.component.html
+++ b/src/app/creditos/components/datosTabs/datos-cliente/datos-cliente.component.html
@@ -27,4 +27,10 @@
   <p class="bg-light p-2 fw-bold rounded-2 mt-1">
     {{cliente.colonia}} / {{cliente.casa}} / {{cliente.calle}} / {{cliente.referencia}}
   </p>
+
+  <div class="d-flex justify-content-end mt-5">
+    <button type="button" class="btn btn-success" (click)="clienteService.selectTab(1)">
+      {{'>'}}
+    </button>
+  </div>
 </section>
