--- a/src/app/creditos/components/datosTabs/datos-credito/datos-credito.component.html
+++ b/src/app/creditos/components/datosTabs/datos-credito/datos-credito.component.html
@@ -24,8 +24,14 @@
 
   <p class="text-capitalize fw-bold mb-0 text-primary">Oficial de rutas</p>
   <p class="bg-light p-2 fw-bold rounded-2 mt-1">PEREZ LOPEZ GERMAN</p>
-</section>
 
-<pre>
-  {{cliente | json}}
-</pre>
+  <div class="d-flex justify-content-between mt-5">
+    <button type="button" class="btn btn-success" (click)="clienteService.selectTab(0)">
+      {{'<'}}
+    </button>
+    <button type="button" class="btn btn-success" (click)="clienteService.selectTab(2)">
+      {{'>'}}
+    </button>
+  </div>
+
+</section>
