--- a/src/app/creditos/components/datosTabs/galeria/galeria.component.html
+++ b/src/app/creditos/components/datosTabs/galeria/galeria.component.html
@@ -14,4 +14,14 @@
       />
     </div>
   </div>
+
+  <div class="d-flex justify-content-between mt-5">
+    <button type="button" class="btn btn-success" (click)="clienteService.selectTab(1)">
+      {{'<'}}
+    </button>
+    <button type="button" class="btn btn-success" (click)="clienteService.selectTab(3)">
+      {{'>'}}
+    </button>
+  </div>
+
 </section>
