add: inicio component design

--- a/src/app/cobranza/components/inicio/inicio.component.html
+++ b/src/app/cobranza/components/inicio/inicio.component.html
@@ -1,1 +1,11 @@
-<p>inicio works!</p>
+<header class="bg-dark p-2">
+  <h1 class="fs-1 text-white text-center text-md-start mb-0">
+    Menu de Recaudación
+  </h1>
+</header>
+
+<main class="d-flex justify-content-center align-items-center gap-2">
+  <a class="btn btn-success" routerLink="/cobranza/lista">Cobros</a>
+  <button class="btn btn-success">Importar</button>
+  <button class="btn btn-success">Exportar</button>
+</main>
