add: lista component design

--- a/src/app/cobranza/pages/lista/lista.component.html
+++ b/src/app/cobranza/pages/lista/lista.component.html
@@ -1,1 +1,79 @@
-<p>lista works!</p>
+<header class="bg-dark p-3">
+  <h1 class="fs-1 text-capitalize text-white mb-0 text-center text-md-start">
+    Lista de cobranza
+  </h1>
+</header>
+
+<section class="p-2 mt-2 bg-white shadow-sm rounded-1 mx-auto">
+  <div class="d-flex flex-column gap-2">
+    <div>
+      <p class="text-primary mb-2">
+        Oficial:
+        <span class="text-danger text-uppercase fw-bold">JMOX</span>
+      </p>
+      
+      <p class="text-primary mb-2">
+        Monto a Recaudar:
+        <span class="text-danger text-uppercase fw-bold">63331.81</span>
+      </p>
+    
+      <p class="text-primary mb-2">
+        Monto Recaudado:
+        <span class="text-danger text-uppercase fw-bold">0.00</span>
+      </p>
+    
+      <p class="text-primary mb-2">
+        Numero de Cobros:
+        <span class="text-danger text-uppercase fw-bold">0</span>
+      </p>
+    
+      <p class="text-primary mb-2">
+        Numero de Represtamos:
+        <span class="text-danger text-uppercase fw-bold">0</span>
+      </p>
+    
+      <p class="text-primary mb-2">
+        Cantidad de clientes:
+        <span class="text-danger text-uppercase fw-bold">13</span>
+      </p>
+      
+      <p class="text-primary mb-2">
+        % Normalidad:
+        <span class="text-danger text-uppercase fw-bold">23.74</span>
+      </p>
+    </div>
+
+    <div>
+      <div class="input-group mb-3">
+        <span class="input-group-text">lupa</span>
+        <input type="text" class="form-control" placeholder="Buscar..." aria-label="Buscar">
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="p-3 mt-2 bg-white shadow-sm rounded-1 mx-auto mt-4">
+  <div class="d-flex align-items-center gap-3 mb-2 justify-content-between max-w-400">
+    <p class="text-primary mb-0">Listar clientes gestionados</p>
+    <div class="form-check form-switch mb-0">
+      <input class="form-check-input" type="checkbox" role="switch" id="listar-clientes">
+    </div>
+  </div>
+
+  <div class="d-flex align-items-center gap-3 justify-content-between max-w-400">
+    <p class="text-primary mb-0">Listar clientes adelantados S y M</p>
+    <div class="form-check form-switch mb-0">
+      <input class="form-check-input" type="checkbox" role="switch" id="listar-clientes-adelantados">
+    </div>
+  </div>
+</section>
+
+<section class="d-flex flex-column flex-md-row flex-wrap gap-3 justify-content-center">
+  <div *ngFor="let cliente of clientes" class="border-bottom">
+    <p class="text-primary mb-0">C - 2{{cliente.id}}</p>
+    <p class="text-primary">{{cliente.primerApellido + ', ' + cliente.nombres}}</p>
+    <a class="text-success fw-bold" href="#">
+      {{ cliente.colonia + ' / ' + cliente.casa + ' / ' + cliente.referencia }}
+    </a>
+  </div>
+</section>
