create: tabs contents

--- a/src/app/cobranza/pages/ventanilla-pago/ventanilla-pago.component.html
+++ b/src/app/cobranza/pages/ventanilla-pago/ventanilla-pago.component.html
@@ -1,1 +1,5 @@
-<p>ventanilla-pago works!</p>
+<header class="bg-dark p-3">
+  <h1 class="text-white text-center text-md-start fs-2 mb-0">Ventanilla de pago</h1>
+</header>
+
+<app-tabs></app-tabs>
