--- a/src/app/cobranza/components/datosTabs/recaudacion/recaudacion.component.html
+++ b/src/app/cobranza/components/datosTabs/recaudacion/recaudacion.component.html
@@ -1,1 +1,137 @@
-<p>recaudacion works!</p>
+<section class="bg-white p-3">
+  <p class=" fw-bold mb-0 text-primary">Nombre Completo</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    PEREZ ESPINAL, DUNIA MARITZA
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Numero de credito</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    5-29975
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Fecha de desembolso</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    19/09/2020
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Fecha de Vencimiento</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    15/02/2021
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Fecha Ultimo Pago</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    02/10/2020
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Monto Prestamo</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    5700.00
+  </p>
+  
+  <div class="row">
+    <div class="col-md-6">
+      <p class=" fw-bold mb-0 text-primary">Numero de cuotas</p>
+      <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+        40
+      </p>
+    </div>
+
+    <div class="col-md-6">
+      <p class=" fw-bold mb-0 text-primary">Monto de cuotas</p>
+      <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+        100.50
+      </p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-8">
+      <p class=" fw-bold mb-0 text-primary">Cuotas Cobradas</p>
+      <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+        2/40
+      </p>
+    </div>
+
+    <div class="col-md-4">
+      <p class=" fw-bold mb-0 text-primary">%</p>
+      <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+        5%
+      </p>
+    </div>
+  </div>
+
+  <p class=" fw-bold mb-0 text-primary">Cuotas restantes para represtamos</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    38
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Cuotas restantes para refinanciamiento</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    30
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Monto a cancelar a la fecha</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    3875.37
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Valor max a pagar para readecuar</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    0.00
+  </p>
+
+  <div class="row">
+    <div class="col-md-6">
+      <p class=" fw-bold mb-0 text-primary">Monto Cuota Actual</p>
+      <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+        0.00
+      </p>
+    </div>
+    <div class="col-md-6">
+      <p class=" fw-bold mb-0 text-primary">No. Cuota</p>
+      <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+        3
+      </p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-6">
+      <p class=" fw-bold mb-0 text-primary">Monto Cuota Atrasada</p>
+      <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+        0.00
+      </p>
+    </div>
+    <div class="col-sm-6">
+      <p class=" fw-bold mb-0 text-primary">No. Cuota Atrasadas</p>
+      <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+        0
+      </p>
+    </div>
+  </div>
+
+  <p class="fw-bold mb-0 text-primary">Monto Interes Mora</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    0.00
+  </p>
+
+  <p class="fw-bold mb-0 text-primary">Monto a Pagar</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    0.00
+  </p>
+
+  <div class="d-flex flex-column flex-md-row gap-3 justify-content-md-between justify-content-center">
+    <div class="d-flex gap-2">
+      <button type="button" class="btn btn-success" disabled>Represtamos</button>
+      <button type="button" class="btn btn-success">Cobro</button>
+    </div>
+
+    <div class="d-md-flex gap-2">
+      <button type="button" class="btn btn-success mb-2 mb-md-0">Readecuacion</button>
+      <button type="button" class="btn btn-success" disabled>Refinanciamiento</button>
+    </div>
+
+  </div>
+
+</section>
