add: datosCliente tab content

--- a/src/app/cobranza/components/datosTabs/datos-cliente/datos-cliente.component.html
+++ b/src/app/cobranza/components/datosTabs/datos-cliente/datos-cliente.component.html
@@ -1,1 +1,37 @@
-<p>datos-cliente works!</p>
+<section class="bg-white p-3">
+  <p class=" fw-bold mb-0 text-primary">Nombre Completo</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    PEREZ ESPINAL, DUNIA MARITZA
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Documento</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    0301-1994-02082
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Telefono</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    98017165
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Celular</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    96630921
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Direccion del domicilio</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1 text-uppercase">
+    colonia satelite sps cerca de dos pinos a la par de una pulperia
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary mb-1">Tipo de pago</p>
+  <select
+    name="pago"
+    class="form-select mb-3"
+  >
+    <option value="" selected>--Seleccione--</option>
+    <option value="adelantado">Pago adelantado</option>
+    <option value="abono-capital">Abono a capitar</option>
+  </select>
+
+</section>
