add: garante tab content

--- a/src/app/cobranza/components/datosTabs/garante/garante.component.html
+++ b/src/app/cobranza/components/datosTabs/garante/garante.component.html
@@ -1,1 +1,47 @@
-<p>garante works!</p>
+<section class="bg-white p-3">
+  <p class=" fw-bold mb-0 text-primary">Nombres</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    DUNIA MARITZA
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Primer Apellido</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    PEREZ
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Segundo Apellido</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    ESPINAL
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Identificacion</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    0301-1994-02082
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Municipio</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1">
+    CORTES
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Direccion del domicilio</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1 text-uppercase">
+    colonia satelite sps cerca de dos pinos a la par de una pulperia
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Numero de ceular</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1 text-uppercase">
+    89654321
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Telefono</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1 text-uppercase">
+    2554124520
+  </p>
+
+  <p class=" fw-bold mb-0 text-primary">Estado Civil</p>
+  <p class="bg-light p-2 fw-bold rounded-2 mt-1 text-uppercase">
+    Soltero(a)
+  </p>
+
+</section>
