add: rePrestamo tab content

--- a/src/app/re-prestamos/components/home/home.component.html
+++ b/src/app/re-prestamos/components/home/home.component.html
@@ -1,1 +1,5 @@
+<header class="bg-dark p-2 mb-2">
+  <h1 class="fs-3 text-center text-md-start mb-0 text-white">Représtamo</h1>
+</header>
+
 <router-outlet></router-outlet>
