--- a/src/app/re-prestamos/pages/nuevo/nuevo.component.html
+++ b/src/app/re-prestamos/pages/nuevo/nuevo.component.html
@@ -1,1 +1,7 @@
-<p>nuevo works!</p>
+<mat-tab-group>
+  <mat-tab label="Represtamo">
+    <app-re-prestamo></app-re-prestamo>
+  </mat-tab>
+  <mat-tab label="Second"> Content 2 </mat-tab>
+  <mat-tab label="Third"> Content 3 </mat-tab>
+</mat-tab-group>
