--- a/src/app/creditos/components/datosTabs/galeria/galeria.component.html
+++ b/src/app/creditos/components/datosTabs/galeria/galeria.component.html
@@ -1,11 +1,11 @@
 <section class="bg-white shadow-md p-2 mt-3 px-3 mx-auto w-md-75">
   <h2 class="fs-1 text-center text-sm-start">Garantias</h2>
 
-  <h3 *ngIf="cliente.nombreArticulo">{{cliente.nombreArticulo}}</h3>
+  <h3 *ngIf="cliente?.nombreArticulo">{{cliente?.nombreArticulo}}</h3>
 
   <div class="d-flex gap-2">
     <div
-      *ngFor="let imagen of cliente.imagenesGarantia"
+      *ngFor="let imagen of cliente?.imagenesGarantia"
     >
       <img
         [src]="imagen"
