--- a/src/app/re-prestamos/pages/nuevo/nuevo.component.html
+++ b/src/app/re-prestamos/pages/nuevo/nuevo.component.html
@@ -2,6 +2,8 @@
   <mat-tab label="Represtamo">
     <app-re-prestamo></app-re-prestamo>
   </mat-tab>
-  <mat-tab label="Second"> Content 2 </mat-tab>
-  <mat-tab label="Third"> Content 3 </mat-tab>
+  <mat-tab label="Garantias">
+    <app-galeria></app-galeria>
+  </mat-tab>
+  <mat-tab label="Aval"> Content 3 </mat-tab>
 </mat-tab-group>
